--- a/app/src/main/res/anim/enter_right_to_left.xml
+++ b/app/src/main/res/anim/enter_right_to_left.xml
@@ -2,9 +2,24 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:fromXDelta="0%"
-        android:toXDelta="-100%"
+        android:fromXDelta="100%"
+        android:toXDelta="0%"
         android:fromYDelta="0"
         android:toYDelta="0"
         android:duration="300"/>
+
+    <alpha android:fromAlpha="0.0"
+        android:toAlpha="1.0"
+        android:duration="300" />
+
+    <scale
+        android:duration="200"
+        android:fromXScale="90%"
+        android:fromYScale="90%"
+        android:toXScale="100%"
+        android:toYScale="100%"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:interpolator="@android:anim/decelerate_interpolator"
+        />
 </set>
