--- a/app/src/main/res/anim/exit_right_to_left.xml
+++ b/app/src/main/res/anim/exit_right_to_left.xml
@@ -3,8 +3,24 @@
 
     <translate
         android:fromXDelta="0%"
-        android:toXDelta="100%"
+        android:toXDelta="-100%"
         android:fromYDelta="0"
         android:toYDelta="0"
         android:duration="300"/>
+
+    <alpha android:fromAlpha="1.0"
+        android:toAlpha="0.0"
+        android:duration="300" />
+
+
+    <scale
+        android:duration="200"
+        android:fromXScale="100%"
+        android:fromYScale="100%"
+        android:toXScale="90%"
+        android:toYScale="90%"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:interpolator="@android:anim/decelerate_interpolator"
+        />
 </set>
