--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -3,17 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_dark_grey"
     tools:context=".QRActivity">
 
-    <FrameLayout
-        android:id="@+id/qr_scanner_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/qr_code_container"
+        android:layout_marginBottom="24dp"
+        android:layout_centerHorizontal="true"
+        android:text="This QR code is valid for adding one friend"/>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/qr_code_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp">
 
@@ -27,7 +31,6 @@
             android:contentDescription="@string/qr_code_imgview" />
 
     </FrameLayout>
-
 
 
 
