--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -5,6 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".QRActivity">
 
+    <ImageButton
+        style="@style/ButtonImage"
+        android:id="@+id/qr_btn_close_activity"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentStart="true"
+        android:tint="@color/color_dark"
+        android:src="@drawable/ic_arrow_left"
+        android:padding="16dp"
+        android:background="@color/trans"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +50,9 @@
         android:id="@+id/qr_button_scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_below="@id/qr_code_container"
+        android:layout_centerHorizontal="true"
         android:text="@string/qr_scan"
-        android:layout_alignParentBottom="true"
         />
 </RelativeLayout>
