implement deleting friend

--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -23,7 +23,7 @@
         android:layout_above="@+id/qr_code_container"
         android:layout_marginBottom="24dp"
         android:layout_centerHorizontal="true"
-        android:text="This QR code is valid for adding one friend"/>
+        android:text="@string/qr_valid"/>
 
     <FrameLayout
         android:id="@+id/qr_code_container"
