--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,7 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/bgColor"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.nopoint.midpoint.fragments.SettingsFragment">
 
@@ -22,6 +25,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="" />
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/dark_mode_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/scroll_view_chips"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:checked="false"
+            android:text="Dark Mode" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -33,3 +47,4 @@
         android:textColor="@color/color_white"
         app:cornerRadius="0dp" />
 </FrameLayout>
+
