--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,38 +1,32 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/orange</item>
-        <item name="colorPrimaryDark">@color/color_light_grey</item>
-        <item name="colorAccent">@color/orange</item>
-        <item name="colorOnPrimary">@color/color_white</item>
-        <item name="android:textViewStyle">@font/pt_sans</item>
-        <item name="android:textColor">@color/color_dark</item>
 
-    </style>
-
-    <style name="MidpointFullscreen" parent="AppTheme">
+    <style name="MidpointFullscreen" parent="InitialTheme">
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
 
-    <!-- DIALOG -->
+
+    <!-- DIALOG
     <style name="DialogFriendRequest" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
         <item name="colorAccent">@color/color_warning</item>
         <item name="android:titleTextStyle">@font/pt_sans_bold</item>
     </style>
-    
+
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="android:backgroundTint">@color/orange</item>
         <item name="android:textColor">@color/color_white</item>
-    </style>
+    </style> -->
+
+
 
 
     // Primary Button
     <style name="ButtonPrimary" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">?attr/buttonColor</item>
+        <item name="android:textColor">?attr/textColor</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -56,15 +50,23 @@
     </style>
 
 
+
     // Input EditText
     <style name="InputEditText" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:paddingStart">4dp</item>
+        <item name="android:textColor">?attr/textColor</item>
     </style>
+
+    <style name="Perkele" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:background">?attr/bottomMenuBackgroundColor</item>
+    </style>
+
 
     <!-- BottomSheet -->
     <style name="RoundedBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceOverlay.MaterialComponents.BottomSheet</item>
+        <item name="android:backgroundTint">?attr/bottomSheetBackgroundColor</item>
     </style>
     <style name="CustomShapeAppearanceOverlay.MaterialComponents.BottomSheet" parent="">
         <item name="cornerFamily">rounded</item>
