--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,13 +16,14 @@
             android:id="@+id/login_input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="?attr/textColor"
             android:hint="@string/hint_email"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_input_email"
                 style="@style/InputEditText"
-                android:text="a@a.com"
+                app:hintTextColor="?attr/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -33,6 +34,7 @@
             android:id="@+id/login_input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="?attr/textColor"
             android:hint="@string/hint_password"
             app:errorEnabled="true">
 
@@ -40,7 +42,6 @@
                 style="@style/InputEditText"
                 android:id="@+id/login_input_password"
                 android:inputType="textPassword"
-                android:text="password1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -54,6 +55,7 @@
         android:id="@+id/button_log_in"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
+        android:contentDescription="@string/entry_log_in"
         android:text="@string/entry_log_in"/>
 
 </RelativeLayout>
