--- a/app/src/main/res/layout/request_dialog.xml
+++ b/app/src/main/res/layout/request_dialog.xml
@@ -63,6 +63,21 @@
         </com.google.android.material.chip.ChipGroup>
     </ScrollView>
 
+    <ProgressBar
+        android:id="@+id/friends_spinner"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/scroll_view_chips"
+        android:layout_alignTop="@+id/scroll_view_chips"
+        android:layout_alignEnd="@+id/scroll_view_chips"
+        android:layout_alignBottom="@+id/scroll_view_chips"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="48dp"
+        android:visibility="gone" />
+
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/location_switch"
         android:layout_width="wrap_content"
