--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -89,6 +89,7 @@
             android:id="@+id/friends_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="8dp"
             android:layoutAnimation="@anim/layout_animation"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
