--- a/app/src/main/res/layout/row_friend_request.xml
+++ b/app/src/main/res/layout/row_friend_request.xml
@@ -1,52 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="8dp">
 
     <ImageView
-        android:id="@+id/row_friend_request_avatar"
+        android:id="@+id/friends_search_list_avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_centerVertical="true"
         android:src="@drawable/ic_avatar_ph"/>
 
-    <RelativeLayout
-        android:layout_toEndOf="@id/row_friend_request_avatar"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/row_friend_request_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/orange"
-            android:text="Username"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sent you a friend request"
-            android:textSize="12sp"
-            android:layout_below="@+id/row_friend_request_username"/>
-    </RelativeLayout>
-
-
-
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:id="@+id/row_friend_request_btn_deny"
+    <TextView
+        android:id="@+id/friends_search_list_username"
+        android:layout_toEndOf="@id/friends_search_list_avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/row_friend_sent_status"
-        android:text="@string/deny"/>
+        android:layout_centerInParent="true"
+        android:textColor="@color/color_dark"
+        android:textSize="16sp"
+        android:text="Username"/>
+
 
     <ImageView
         style="@style/StatusIcon"
