--- a/app/src/main/res/layout/row_friends_sent.xml
+++ b/app/src/main/res/layout/row_friends_sent.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/row_friends_item_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
@@ -9,15 +8,15 @@
     android:paddingEnd="8dp">
 
     <ImageView
-        android:id="@+id/friends_list_row_avatar"
+        android:id="@+id/friends_search_list_avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_avatar_ph"/>
 
     <TextView
-        android:id="@+id/friends_list_row_username"
-        android:layout_toEndOf="@id/friends_list_row_avatar"
+        android:id="@+id/friends_search_list_username"
+        android:layout_toEndOf="@id/friends_search_list_avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -25,12 +24,10 @@
         android:textSize="16sp"
         android:text="Username"/>
 
-    <ImageButton
-        style="@style/ButtonImage"
-        android:id="@+id/friends_list_row_action"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_more_vertical"
-        android:tint="@color/color_dark_grey"
-        android:textAppearance="?android:textAppearanceLarge"/>
 
+    <ImageView
+        style="@style/StatusIcon"
+        android:id="@+id/friends_req_status"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_pending" />
 </RelativeLayout>
