--- a/app/src/main/res/layout/row_friends_list.xml
+++ b/app/src/main/res/layout/row_friends_list.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/row_friends_item_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:layout_height="56dp"
     android:paddingStart="16dp"
     android:paddingEnd="8dp">
 
@@ -13,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_avatar_ph"/>
 
     <TextView
@@ -29,6 +28,7 @@
         style="@style/ButtonImage"
         android:id="@+id/friends_list_row_action"
         android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_more_vertical"
         android:tint="@color/color_dark_grey"
         android:textAppearance="?android:textAppearanceLarge"/>
