--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
+        android:contentDescription="@string/open_maps"
         android:visibility="gone"
         app:backgroundTint="@color/orange"
         app:layout_anchor="@+id/bottom_sheet"
