--- a/app/src/main/res/layout/row_friend_search_results.xml
+++ b/app/src/main/res/layout/row_friend_search_results.xml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/avatar_content_description"
             android:src="@drawable/ic_avatar_ph"/>
 
         <TextView
@@ -22,12 +23,13 @@
             android:layout_centerInParent="true"
             android:textColor="@color/color_dark"
             android:textSize="16sp"
-            android:text="Username"/>
+            android:text="@string/hint_username"/>
 
     <ImageButton
         style="@style/ButtonImage"
         android:id="@+id/friends_button_send_friend_request"
         android:layout_alignParentEnd="true"
+        android:contentDescription="@string/send_friend_request"
         android:src="@drawable/ic_add"
         android:tint="@color/color_light_grey"/>
 
@@ -35,6 +37,7 @@
         style="@style/StatusIcon"
         android:id="@+id/friends_req_status"
         android:layout_alignParentEnd="true"
+        android:contentDescription="@string/friend_request_status"
         android:src="@drawable/ic_pending"
         android:visibility="gone"/>
 </RelativeLayout>
