--- a/app/src/main/res/layout/row_friends_list.xml
+++ b/app/src/main/res/layout/row_friends_list.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/avatar_content_description"
         android:src="@drawable/ic_avatar_ph"/>
 
     <TextView
@@ -25,11 +26,12 @@
         android:text="Username"/>
 
     <ImageButton
-        style="@style/ButtonImage"
         android:id="@+id/friends_list_row_action"
+        style="@style/ButtonImage"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_more_vertical"
+        android:contentDescription="@string/more_actions_description"
         android:tint="@color/color_dark_grey"
         android:textAppearance="?android:textAppearanceLarge"/>
 
