refactor icon buttons, adjust friend list

--- a/app/src/main/res/anim/item_animation_fall_down.xml
+++ b/app/src/main/res/anim/item_animation_fall_down.xml
@@ -16,7 +16,7 @@
         android:interpolator="@android:anim/decelerate_interpolator"
         />
 
-    <scale
+    <!--<scale
         android:duration="400"
         android:fromXScale="105%"
         android:fromYScale="105%"
@@ -25,5 +25,5 @@
         android:pivotX="50%"
         android:pivotY="50%"
         android:interpolator="@android:anim/decelerate_interpolator"
-        />
+        />-->
 </set>
