--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,15 @@
         <item name="android:background">@color/trans</item>
     </style>
 
+
+    <!-- Round Image Button -->
+    <style name="RoundImageButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+    </style>
+
     <!-- Status Icon -->
     <style name="StatusIcon">
         <item name="android:layout_width">wrap_content</item>
